--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Gluten Free Food</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="header">
+    <img class="logo">
+    <ul class="nav">
+        <li>Hey</li>
+    </ul>
+</div>
+<div class="content">
 
+</div>
+<div class="footer">
+
+</div>
 </body>
 </html>
